--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,9 @@
 /public/hot
 /public/storage
 /storage/*.key
-# /vendor
+/vendor
 # .env
+db.sql
 .env.backup
 .phpunit.result.cache
 Homestead.json
